lib/tests/compile-fail/nonzero.stderr
error: proc-macro derive panicked
 --> tests/compile-fail/nonzero.rs:7:24
  |
7 | #[derive(EnumMetadata, NonZeroRepr)]
  |                        ^^^^^^^^^^^
  |
  = help: message: assertion failed: discriminant != 0
